<resources>
    <string name="app_name">wHealth</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_license_no">License Number</string>
    <string name="prompt_qualification">Qualification</string>
    <string name="prompt_experience">Experience</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account_text">"Don't have account? Sign Up"</string>
    <string name="forget_pass_text">"Forgot Password?"</string>
    <string name="already_sign_in_text">"Already have account? Sign In"</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="clinic">Clinic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="action_change_pass">Change Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="all_clinics">All Clinics</string>
    <string name="active_doctors">Active Doctors</string>
    <string name="new_doctor_requests">New Doctor Requests</string>
    <string name="working_doctors">Working Clinic</string>
    <string name="recurring_schedule">Recurring Schedule</string>
    <string name="end_date">End Date</string>
    <string name="slot_length_in_minutes">Slot Length In Minutes</string>4
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_booking_slot">BookingSlot</string>

</resources>