<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:onClick="onRadioButtonClicked"
           />
        <RadioButton android:id="@+id/radio_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:layout_marginLeft="22dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_clinic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clinic"
            android:layout_marginLeft="22dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/registrationNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="Registration Number"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_full_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:selectAllOnFocus="true"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
       />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_address"
        android:inputType="text"
        android:selectAllOnFocus="true"
        />
    <EditText
        android:id="@+id/licenseNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_license_no"
        android:inputType="text"
        android:selectAllOnFocus="true"
        />
    <EditText
        android:id="@+id/qualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_qualification"
        android:inputType="text"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_experience"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signinText"
         android:text="@string/already_sign_in_text"
         android:textColor="@color/blue"
         android:layout_marginTop="4dp"
         android:layout_gravity="end"
         />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:enabled="true"
        android:text="@string/action_sign_up"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</LinearLayout>
</androidx.core.widget.NestedScrollView>